feat: add meta service for SEO

--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,13 @@
     <base href="/" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="icon" type="image/x-icon" href="/assets/logos/favicon.png" />
+    <meta
+      property="og:title"
+      content="BimaTrust Workspace, insurance brokers, insurance software, BD Computing Limited, client management, policy tracking, claims processing, insurance reporting, productivity tools, insurance technology, integrated solutions, streamline insurance tasks, enhance efficiency, improve accuracy, boost productivity, insurance brokerage, innovative insurance tools"
+    />
+    <meta property="og:type" content="website" />
+    <meta property="og:image" content="/assets/logos/favicon.png" />
+    <meta property="og:url" content="https://www.bimatrust.com" />
   </head>
   <body>
     <app-root></app-root>
