--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <title>Bima Trust&reg;</title>
+    <title>Venture Africa</title>
     <base href="/" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="icon" type="image/x-icon" href="/assets/logos/favicon.png" />
@@ -12,7 +12,7 @@
     />
     <meta property="og:type" content="website" />
     <meta property="og:image" content="/assets/logos/favicon.png" />
-    <meta property="og:url" content="https://www.bimatrust.com" />
+    <meta property="og:url" content="https://www.venturaafricasafaris.com" />
   </head>
   <body>
     <app-root></app-root>
