--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,7 @@
   <link rel="icon" type="image/x-icon" href="/assets/logos/favicon.png" />
   <meta name="description"
     content="Experience the ultimate Kenyan safari adventure with Venture Africa Safaris. Explore the best safari tours in Kenya, including Masai Mara, Amboseli, and Tsavo National Parks. Enjoy luxury and affordable safari packages, tailored family safaris, honeymoon packages, and cultural tours. Discover Kenya's stunning wildlife, beautiful beaches, and vibrant culture. Perfect for adventure seekers, bird watchers, photographers, and nature enthusiasts. Book with trusted Kenya tour operators for unbeatable safari deals. Discover Kenya's national parks and the Big Five on an unforgettable safari holiday.">
-  <meta property="og:title"
+  <meta name="keywords"
     content="Kenya Safari Tours, African Safari Holidays, Best Safari in Kenya, Kenya Wildlife Safaris, Masai Mara Safari, Kenya Tour Packages, Luxury Safari Kenya, Affordable Safaris in Kenya, Nairobi Safari Tours, Amboseli National Park Tours, Tsavo National Park Safari, Kenya Travel Guide, Kenya Beach Holidays, Kenya Adventure Tours, Kenya Cultural Tours, Kenya Honeymoon Packages, Family Safaris Kenya, Kenya Bird Watching Tours, Kenya Photography Safaris, Kenya Walking Safaris, Kenya Fly-in Safaris, Kenya Big Five Safari, Kenya Tour Operators, Kenya Safari Deals, Kenya National Parks" />
   <meta property="og:type" content="website" />
   <meta property="og:image" content="/assets/logos/favicon.png" />
